# page-scanner

./: .gitignore
scanner/: .gitignore  Cargo.toml  README.md
scanner/openclaw/: SKILL.md
scanner/scripts/: convert_and_quantize.py  train.py
scanner/src/: cleanup.rs  cli.rs  config.rs  export.rs  geometry.rs  llm.rs  main.rs  model.rs  ocr.rs  pipeline.rs
